--- a/conf/networks/Example.conf
+++ b/conf/networks/Example.conf
@@ -1,10 +1,9 @@
-netname=Example
-address=irc.example.org
-port=6667
-ssl=false
-pass=
-nick=Example
-user=example
-realname=Example
-channels=#modfwango,#help
-nspass=nickservpassword
+netname = "Example"
+address = "irc.example.org"
+port = 6667
+ssl = false
+nick = "Example"
+user = "example"
+realname = "Example"
+channels = "#modfwango,#help"
+nspass = "nickservpassword"
