Huge changes to the base of this project.
Bare with me; a lot of things have changed, so a lot of things will
most likely break.  Changed a whole heap of items to allow for
generalization of the base of this project.  In the future, the
project’s base will hopefully be a submodule of Modfwango-Client.

--- a/conf/connections/Example.conf
+++ b/conf/connections/Example.conf
@@ -1,7 +1,9 @@
-netname = "Example"
 address = "irc.example.org"
 port = 6667
 ssl = false
+
+[options]
+netname = "Example"
 nick = "Example"
 user = "example"
 realname = "Example"
