--- a/conf/modules.conf
+++ b/conf/modules.conf
@@ -5,6 +5,7 @@ events/ChannelNoticeEvent
 events/ChannelPartEvent
 events/ChannelQuitEvent
 events/ChannelTopicEvent
+events/ConnectionLoopEndEvent
 events/NumericEvent
 events/PrivateMessageEvent
 events/PrivateNoticeEvent
