--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .DS_Store
 moddata
 !conf/modules.conf
-conf/networks/*
-!conf/networks/Example.conf
+conf/connections/*
+!conf/connections/Example.conf
