--- a/conf/modules.conf
+++ b/conf/modules.conf
@@ -5,6 +5,9 @@ events/ChannelNoticeEvent
 events/ChannelPartEvent
 events/ChannelQuitEvent
 events/ChannelTopicEvent
+events/ConnectionConnectedEvent
+events/ConnectionCreatedEvent
+events/ConnectionDisconnectedEvent
 events/ConnectionLoopEndEvent
 events/NumericEvent
 events/PrivateMessageEvent
