--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .DS_Store
 moddata
-!conf/modules.conf
+conf/modules.conf
 conf/connections/*
-!conf/connections/Example.conf
+conf/connections/Example.conf
