--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "modfwango"]
-	path = modfwango
+[submodule "core"]
+	path = core
 	url = https://github.com/ClayFreeman/Modfwango-Client.git
