--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "core"]
-	path = core
-	url = https://github.com/ClayFreeman/Modfwango-Client.git
+[submodule ".modfwango"]
+	path = .modfwango
+	url = https://github.com/ClayFreeman/Modfwango-Client
