--- a/conf/modules.conf
+++ b/conf/modules.conf
@@ -11,6 +11,7 @@ events/PrivateNoticeEvent
 events/UserModeEvent
 
 admin/ChannelManagement
+admin/ConnectionControl
 admin/Eval
 admin/MemoryUsage
 admin/ModuleControl
