--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule ".modfwango"]
 	path = .modfwango
-	url = https://github.com/ClayFreeman/Modfwango-Client
+	url = https://github.com/ClayFreeman/Modfwango-Client.git
